--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,18 +60,18 @@ logger.application=DEBUG
 db.test.driver=com.mysql.jdbc.Driver
 db.test.url="jdbc:mysql://localhost/testdb"
 db.test.username="root"
-db.test.password="man8080"
+db.test.password="asdasd"
 
 #slick.dbs.mydb.driver="slick.driver.MySQLDriver$"
 #slick.dbs.mydb.db.driver="com.mysql.jdbc.Driver"
 #slick.dbs.mydb.db.url="jdbc:mysql://localhost/termdb"
 #slick.dbs.mydb.db.user="root"
-#slick.dbs.mydb.db.password="man8080"
+#slick.dbs.mydb.db.password="asdasd"
 
 mysqlDB = {
   url = "jdbc:mysql://localhost/testdb"
   user = "root"
-  password= "man8080"
+  password= "asdasd"
   driver = com.mysql.jdbc.Driver
   connectionPool = disabled
   keepAliveConnection = true
